fix(layout): reduce last width breakpoint
to resolve some layout issues in browsers with sidebar (like opera)

--- a/src/assets/styles/vuetify.scss
+++ b/src/assets/styles/vuetify.scss
@@ -6,6 +6,12 @@
 //        max-width: 1185px !important;
 //    }
 //}
+// slightly reduce last width breakpoint
+@media (min-width: 1804px) {
+    .container {
+        max-width: 1785px !important;
+    }
+}
 
 // md2 slider for tabs
 .v-tabs-slider {
